// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionnaireDesignPage should redirect to the introduction if it has one 1`] = `
<Redirect
  push={false}
  to="/q/3/introduction/1/design"
/>
`;

exports[`QuestionnaireDesignPage should render 1`] = `
<BaseLayout>
  <GetContext
    title={[Function]}
  >
    <Grid
      align="top"
      fillHeight={true}
    >
      <Column
        cols={3}
        gutters={false}
      >
        <withRouter(UnwrappedNavigationSidebar)
          canAddCalculatedSummaryPage={true}
          canAddQuestionConfirmation={true}
          canAddQuestionPage={true}
          data-test="side-nav"
          loading={false}
          onAddCalculatedSummaryPage={[Function]}
          onAddQuestionConfirmation={[Function]}
          onAddQuestionPage={[Function]}
          onAddSection={[MockFunction]}
          questionnaire={
            Object {
              "displayName": "my displayName",
              "id": "3",
              "sections": Array [
                Object {
                  "id": "2",
                  "pages": Array [
                    Object {
                      "answers": Array [
                        Object {
                          "id": "1",
                          "label": "",
                          "options": Array [
                            Object {
                              "id": "1",
                            },
                          ],
                        },
                      ],
                      "description": "",
                      "guidance": "",
                      "id": "1",
                      "pageType": "QuestionPage",
                      "position": 0,
                      "title": "",
                    },
                  ],
                  "title": "",
                },
              ],
              "title": "hello world",
            }
          }
        />
      </Column>
      <Column
        cols={9}
        gutters={false}
      >
        <ContextProvider
          value={
            Object {
              "questionnaire": Object {
                "displayName": "my displayName",
                "id": "3",
                "sections": Array [
                  Object {
                    "id": "2",
                    "pages": Array [
                      Object {
                        "answers": Array [
                          Object {
                            "id": "1",
                            "label": "",
                            "options": Array [
                              Object {
                                "id": "1",
                              },
                            ],
                          },
                        ],
                        "description": "",
                        "guidance": "",
                        "id": "1",
                        "pageType": "QuestionPage",
                        "position": 0,
                        "title": "",
                      },
                    ],
                    "title": "",
                  },
                ],
                "title": "hello world",
              },
            }
          }
        >
          <Switch>
            <Route
              component={[Function]}
              key="page-design"
              path="/q/:questionnaireId/page/:pageId/design/:modifier?"
            />
            <Route
              component={[Function]}
              key="page-preview"
              path="/q/:questionnaireId/page/:pageId/preview"
            />
            <Route
              component={[Function]}
              key="page-routing"
              path="/q/:questionnaireId/page/:pageId/routing"
            />
            <Route
              component={[Function]}
              key="section-design"
              path="/q/:questionnaireId/section/:sectionId/design"
            />
            <Route
              component={[Function]}
              key="section-preview"
              path="/q/:questionnaireId/section/:sectionId/preview"
            />
            <Route
              component={[Function]}
              key="confirmation-design"
              path="/q/:questionnaireId/question-confirmation/:confirmationId/design"
            />
            <Route
              component={[Function]}
              key="confirmation-preview"
              path="/q/:questionnaireId/question-confirmation/:confirmationId/preview"
            />
            <Route
              component={[Function]}
              key="introduction-design"
              path="/q/:questionnaireId/introduction/:introductionId/design/:modifier?"
            />
            <Route
              component={[Function]}
              key="introduction-preview"
              path="/q/:questionnaireId/introduction/:introductionId/preview"
            />
            <Route
              path="*"
              render={[Function]}
            />
          </Switch>
        </ContextProvider>
      </Column>
    </Grid>
  </GetContext>
</BaseLayout>
`;

exports[`QuestionnaireDesignPage should render redirect when finished loading 1`] = `
<Redirect
  push={false}
  to="/q/3/section/2/design"
/>
`;

exports[`QuestionnaireDesignPage should render spinner while loading 1`] = `
<Grid
  align="top"
  fillHeight={true}
>
  <Column
    cols={10}
  >
    <Loading
      height="100%"
    >
      Loading questionnaire…
    </Loading>
  </Column>
</Grid>
`;
